Refactored proposed changes from PR